# meetscribe

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
meetscribe/: config.py  types.py
meetscribe/audio/: capture.py  devices.py  routing.py
meetscribe/cli/: app.py  first_run.py  permissions.py
meetscribe/detection/: teams.py
meetscribe/llm/: client.py  prompts.py
meetscribe/transcription/: diarize.py  engine.py
tests/: conftest.py  test_audio_devices.py  test_config.py  test_detection.py  test_prompts.py  test_types.py
