[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetscribe"
version = "0.1.0"
description = "Local meeting transcription with speaker identification and intelligent summaries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "ollama>=0.3.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "resemblyzer>=0.1.1",
    "torch>=2.0.0",
    "webrtcvad>=2.0.10",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
meetscribe = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["meetscribe*"]
